secondfile/objects/Custom_Quote__c.object
<CustomObject>
    <description>This custom quotes is designed for offcart deals</description>
    <fields>
        <fullName>AT_T_Customer_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AT&amp;T Customer Site</label>
        <referenceTo>CustomerSite__c</referenceTo>
        <relationshipLabel>Custom Quotes</relationshipLabel>
        <relationshipName>Custom_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Access_Speed__c</fullName>
        <label>Access Speed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>T1</fullName>
                </value>
                <value>
                    <fullName>2*T1</fullName>
                </value>
                <value>
                    <fullName>3*T1</fullName>
                </value>
                <value>
                    <fullName>4*T1</fullName>
                </value>
                <value>
                    <fullName>5*T1</fullName>
                </value>
                <value>
                    <fullName>6*T1</fullName>
                </value>
                <value>
                    <fullName>7*T1</fullName>
                </value>
                <value>
                    <fullName>8*T1</fullName>
                </value>
                <value>
                    <fullName>T3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Access_Type__c</fullName>
        <label>Access Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TDM</fullName>
                </value>
                <value>
                    <fullName>Ethernet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_End_Customer_Junction__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account End Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Account_End_Customer_Junction__c.Account__c</valueField>
            </filterItems>
            <infoMessage>Quote Account Should Match with Account End Customer Account</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account_End_Customer_Junction__c</referenceTo>
        <relationshipLabel>Custom Quotes</relationshipLabel>
        <relationshipName>Custom_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Custom Quotes</relationshipLabel>
        <relationshipName>Custom_Quotes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>COS_Package__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COS Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cumulative_List_Price__c</fullName>
        <label>Cumulative List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cumulative_OTC_Price__c</fullName>
        <label>Cumulative OTC Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cumulative_Price__c</fullName>
        <label>Cumulative Price</label>
        <summarizedField>Custom_Product__c.Price__c</summarizedField>
        <summaryForeignKey>Custom_Product__c.Custom_Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Custom_List_Price__c</fullName>
        <label>Custom List Price</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Desk_Discount__c</fullName>
        <label>Deal Desk Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <label>Deal Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Service</fullName>
                </value>
                <value>
                    <fullName>Addendum - Add</fullName>
                </value>
                <value>
                    <fullName>Addendum - Delete</fullName>
                </value>
                <value>
                    <fullName>Addendum - Change</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Revision to Existing Quote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discounted_Price__c</fullName>
        <label>Discounted Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Customer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>End Customer</label>
        <referenceTo>End_Customer__c</referenceTo>
        <relationshipLabel>Custom Quotes</relationshipLabel>
        <relationshipName>Custom_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Final_Price__c</fullName>
        <formula>ROUND(Cumulative_Price__c - Cumulative_Price__c *  Deal_Desk_Discount__c ,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IP_Flex_Plan__c</fullName>
        <label>IP Flex Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IP_Flex_of_CC__c</fullName>
        <label>IP Flex # of CC</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mailing_Street_Address__c</fullName>
        <label>Mailing Street Address</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non__c</fullName>
        <label>Non Discountable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Products__c</fullName>
        <label>Number of Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Port_Speed__c</fullName>
        <label>Port Speed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>T1</fullName>
                </value>
                <value>
                    <fullName>2*T1</fullName>
                </value>
                <value>
                    <fullName>3*T1</fullName>
                </value>
                <value>
                    <fullName>4*T1</fullName>
                </value>
                <value>
                    <fullName>5*T1</fullName>
                </value>
                <value>
                    <fullName>6*T1</fullName>
                </value>
                <value>
                    <fullName>7*T1</fullName>
                </value>
                <value>
                    <fullName>8*T1</fullName>
                </value>
                <value>
                    <fullName>T3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_Quote__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Price Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricing_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pricing Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AVPN</fullName>
                </value>
                <value>
                    <fullName>MIS Basic</fullName>
                </value>
                <value>
                    <fullName>MIS Plus</fullName>
                </value>
                <value>
                    <fullName>ANIRA</fullName>
                </value>
                <value>
                    <fullName>ASE</fullName>
                </value>
                <value>
                    <fullName>AIA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_Name_ID__c</fullName>
        <label>Quote Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Reason_Multiple_Allowed__c</fullName>
        <label>Quote Reason (Multiple Allowed)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Addendum</fullName>
                </value>
                <value>
                    <fullName>Consume to use</fullName>
                </value>
                <value>
                    <fullName>Not In Portal - Product</fullName>
                </value>
                <value>
                    <fullName>Not In Portal - Speed/Feature</fullName>
                </value>
                <value>
                    <fullName>Portal Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_Request_Document_ID__c</fullName>
        <label>Quote Request Document ID</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Quote_Request_Template__c</fullName>
        <description>Download the template for Quote Pricing</description>
        <formula>HYPERLINK(&quot;https://ebm--devoct--c.cs41.content.force.com/servlet/servlet.FileDownload?file=015550000005vAh&quot;,&quot;Quote Request Template&quot;,&quot;Test&quot; )</formula>
        <inlineHelpText>Download the template for Quote Pricing</inlineHelpText>
        <label>Quote Request Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondaryCnotact__c</fullName>
        <label>Secondary Contact</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Identifier_PON__c</fullName>
        <label>Site Identifier (PON)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Originator</fullName>
                    <default>true</default>
                    <label>Originator</label>
                </value>
                <value>
                    <fullName>Deal Desk</fullName>
                </value>
                <value>
                    <fullName>Pricing Team</fullName>
                </value>
                <value>
                    <fullName>Contracting</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State1__c</fullName>
        <label>State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Sent for approval</fullName>
                </value>
                <value>
                    <fullName>Signed</fullName>
                </value>
                <value>
                    <fullName>Countersigned</fullName>
                </value>
                <value>
                    <fullName>Request Aproved</fullName>
                </value>
                <value>
                    <fullName>Approval Request Denied</fullName>
                </value>
                <value>
                    <fullName>Approval oh-hold</fullName>
                </value>
                <value>
                    <fullName>Request Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term_Length__c</fullName>
        <label>Term Length</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>12 months</fullName>
                </value>
                <value>
                    <fullName>36 months</fullName>
                </value>
                <value>
                    <fullName>60 months</fullName>
                </value>
                <value>
                    <fullName>Month to Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MRC</fullName>
                </value>
                <value>
                    <fullName>NRC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unilink_Package__c</fullName>
        <label>Unilink Package</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_long__c</fullName>
        <label>Zip (long)</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_TN_s__c</fullName>
        <label># of TN&apos;s</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_VTN_s__c</fullName>
        <label># of VTN&apos;s</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Custom Quote</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CQ-{00000000}</displayFormat>
        <label>Custom Quote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>